# discredit

./: .gitignore  README.md
backend/: config.py  pyproject.toml
backend/analysis/: clusterer.py  embedder.py  graph_builder.py  taxonomy.py  taxonomy_classifier.py
backend/queries/: analysis_queries.cypher  viz_queries.cypher
backend/scrapers/: discord.py  reddit.py
backend/scripts/: build_neo4j_graph.py  comprehensive_opportunity_analysis.py  export_integration_requests.py  extract_opportunities.py  test_clustering_light.py  test_credentials.py  test_discord_scraper_light.py  test_graph_db.py  test_noise.py  test_reddit_scraper_light.py  test_sqlite_db.py  test_vector_store.py  view_taxonomy.py
backend/storage/: graph_db.py  sqlite_db.py  vector_store.py
